[gd_scene load_steps=3 format=3 uid="uid://bjpmr14j8dtli"]

[ext_resource type="Script" path="res://menu_scene.gd" id="1_wus2t"]

[sub_resource type="Theme" id="Theme_hekjy"]

[node name="Menu Scene" type="Node2D"]
script = ExtResource("1_wus2t")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1928.0
offset_bottom = 1090.0
color = Color(0.752941, 0.403922, 0.388235, 1)

[node name="Titulo" type="Label" parent="."]
offset_right = 1920.0
offset_bottom = 500.0
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 250
text = "Puzzle House"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_top = 400.0
offset_right = 1920.0
offset_bottom = 980.0
theme = SubResource("Theme_hekjy")

[node name="Botones" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Jugar" type="Button" parent="CenterContainer/Botones"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Jugar"

[node name="Opciones" type="Button" parent="CenterContainer/Botones"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Opciones"

[node name="Creditos" type="Button" parent="CenterContainer/Botones"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Creditos"

[node name="Salir" type="Button" parent="CenterContainer/Botones"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Salir"

[node name="Menudeopciones" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 30

[node name="Atrás" type="Button" parent="CenterContainer/Menudeopciones"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 75
text = "Volver atrás"

[node name="PantallaCompleta" type="CheckBox" parent="CenterContainer/Menudeopciones"]
layout_mode = 2
theme_override_font_sizes/font_size = 75
text = "Pantalla Completa"

[node name="Volslider" type="HSlider" parent="CenterContainer/Menudeopciones"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_constants/grabber_offset = 0
max_value = 1.0
step = 0.001

[node name="Label" type="Label" parent="CenterContainer/Menudeopciones/Volslider"]
custom_minimum_size = Vector2(680, 55)
layout_mode = 0
offset_left = 3.0
offset_top = -13.0
offset_right = 683.0
offset_bottom = 77.0
theme_override_font_sizes/font_size = 65
text = "Volumen"
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="CenterContainer/Menudeopciones"]
custom_minimum_size = Vector2(500, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 32
selected = 0
allow_reselect = true
item_count = 3
popup/item_0/text = "1min"
popup/item_0/id = 1
popup/item_1/text = "2min"
popup/item_1/id = 2
popup/item_2/text = "3min"
popup/item_2/id = 3

[node name="Label" type="Label" parent="CenterContainer/Menudeopciones/OptionButton"]
layout_mode = 0
offset_left = 23.0
offset_top = -75.0
offset_right = 463.0
offset_bottom = 1.0
theme_override_font_sizes/font_size = 55
text = "Tiempo de Juego"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Creditosmenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="Names" type="Label" parent="CenterContainer/Creditosmenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 120
text = "Hecho por Estudiantes UPSA"

[node name="Atrás" type="Button" parent="CenterContainer/Creditosmenu"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 75
text = "Volver atrás"

[connection signal="pressed" from="CenterContainer/Botones/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="CenterContainer/Botones/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="CenterContainer/Botones/Creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="CenterContainer/Botones/Salir" to="." method="_on_salir_pressed"]
[connection signal="pressed" from="CenterContainer/Menudeopciones/Atrás" to="." method="_on_atrás_pressed"]
[connection signal="toggled" from="CenterContainer/Menudeopciones/PantallaCompleta" to="." method="_on_pantalla_completa_toggled"]
[connection signal="value_changed" from="CenterContainer/Menudeopciones/Volslider" to="." method="_on_vol_slider_value_changed"]
[connection signal="pressed" from="CenterContainer/Creditosmenu/Atrás" to="." method="_on_atrás_pressed"]
